<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:text="@string/tishi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sure_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/sure"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/OPMENUActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OPMENUActivity"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="174dp" />

        <RadioButton
            android:id="@+id/CTMENUActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CTENUActivity"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="222dp" />

        <RadioButton
            android:id="@+id/POPActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/POPActivity"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="270dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>